# rust_solc

./: .travis.yml  Cargo.toml  README.md
example/: Cargo.toml  build.rs
example/contracts/: test.sol
example/src/: lib.rs  main.rs
src/: error.rs  lib.rs  main.rs
